[metadata]
name = fms_yaml_tools
version = 0.0.1
author = Uriel Ramirez, Eric Stofferahn
author_email = Uriel.Ramirez@NOAA.gov, Eric.Stofferahn@NOAA.gov
description = Suite of tools to convert ASCII FMS table files to YAML for use in FMS-based models
long_description = file: README.md
# https://opensource.org/licenses
license_files = LICENSE.md
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
url = https://github.com/NOAA-GFDL/fms_yaml_tools
project_urls =
    Bug Tracker = https://github.com/NOAA-GFDL/fms_yaml_tools/issues

[options]
install_requires =
    pyyaml
packages =
    fms_yaml_tools/data_table
    fms_yaml_tools/diag_table
    fms_yaml_tools/field_table
scripts =
    fms_yaml_tools/data_table/data_table_to_yaml.py
    fms_yaml_tools/diag_table/diag_table_to_yaml.py
    fms_yaml_tools/field_table/field_to_yaml.py
