[metadata]
name = fms_yaml_tools
# Update __version__ variable in fms_yaml_tools/__init__.py
version = attr: fms_yaml_tools.__version__
author = Uriel Ramirez, Eric Stofferahn
author_email = Uriel.Ramirez@NOAA.gov, Eric.Stofferahn@NOAA.gov
description = Suite of tools to convert ASCII FMS table files to YAML for use in FMS-based models
long_description = file: README.md
# https://opensource.org/licenses
license_files = LICENSE.md
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
url = https://github.com/NOAA-GFDL/fms_yaml_tools
project_urls =
    Bug Tracker = https://github.com/NOAA-GFDL/fms_yaml_tools/issues

[options]
install_requires =
    pyyaml
packages =
    fms_yaml_tools/data_table
    fms_yaml_tools/diag_table
    fms_yaml_tools/field_table
    fms_yaml_tools

[options.entry_points]
console_scripts =
    data-table-to-yaml = fms_yaml_tools.data_table.data_table_to_yaml:main
    is-valid-data-table-yaml = fms_yaml_tools.data_table.is_valid_data_table_yaml:main
    combine-data-table-yamls = fms_yaml_tools.data_table.combine_data_table_yamls:main
    diag-table-to-yaml = fms_yaml_tools.diag_table.diag_table_to_yaml:main
    is-valid-diag-table-yaml = fms_yaml_tools.diag_table.is_valid_diag_table_yaml:main
    combine-diag-table-yamls = fms_yaml_tools.diag_table.combine_diag_table_yamls:main
    field-table-to-yaml = fms_yaml_tools.field_table.field_table_to_yaml:main
    combine-field-table-yamls = fms_yaml_tools.field_table.combine_field_table_yamls:main
