[metadata]
name = fms_yaml_tools
# Update __version__ variable in fms_yaml_tools/__init__.py
version = attr: fms_yaml_tools.__version__
author = Uriel Ramirez, Eric Stofferahn
author_email = Uriel.Ramirez@NOAA.gov, Eric.Stofferahn@NOAA.gov
description = Suite of tools to convert ASCII FMS table files to YAML for use in FMS-based models
long_description = file: README.md
# https://opensource.org/licenses
license_files = LICENSE.md
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
url = https://github.com/NOAA-GFDL/fms_yaml_tools
project_urls =
    Bug Tracker = https://github.com/NOAA-GFDL/fms_yaml_tools/issues

[options]
install_requires =
    pyyaml
    click
    jsonschema
packages =
    fms_yaml_tools/schema
    fms_yaml_tools/data_table
    fms_yaml_tools/diag_table
    fms_yaml_tools/field_table
    fms_yaml_tools/schema/gfdl_msd_schemas/FMS
    fms_yaml_tools

[options.package_data]
* = *.json

[options.entry_points]
console_scripts =
    validate-schema = fms_yaml_tools.schema.validate_schema:valyaml
    data-table-to-yaml = fms_yaml_tools.data_table.data_table_to_yaml:data_to_yaml
    is-valid-data-table-yaml = fms_yaml_tools.data_table.is_valid_data_table_yaml:validate_data_yaml
    combine-data-table-yamls = fms_yaml_tools.data_table.combine_data_table_yamls:combine_data_table_yaml
    diag-table-to-yaml = fms_yaml_tools.diag_table.diag_table_to_yaml:diag_to_yaml
    is-valid-diag-table-yaml = fms_yaml_tools.diag_table.is_valid_diag_table_yaml:validate_diag_yaml
    combine-diag-table-yamls = fms_yaml_tools.diag_table.combine_diag_table_yamls:combine_diag_table_yaml
    field-table-to-yaml = fms_yaml_tools.field_table.field_table_to_yaml:field_to_yaml
    is-valid-field-table-yaml = fms_yaml_tools.field_table.is_valid_field_table_yaml:validate_field_yaml
    combine-field-table-yamls = fms_yaml_tools.field_table.combine_field_table_yamls:combine_field_table_yaml
    diag-yaml-list = fms_yaml_tools.diag_table.diag_yaml_list:dyl

[flake8]
show-source = True
statistics = True
max-line-length = 120
extend-ignore = C901, E731
per-file-ignores =
    __init__.py: F401
